--- a/assets/adminstyle.css
+++ b/assets/adminstyle.css
@@ -619,3 +619,33 @@ border-radius: 4px;
     background-color: #110ec9;
     color: white;
   }
+
+/* Order detail page css  */
+
+
+
+.card {
+  box-shadow: 0 20px 27px 0 rgb(0 0 0 / 5%);
+}
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 0 solid rgba(0,0,0,.125);
+  border-radius: 1rem;
+  padding: 50px;
+  margin-top: 20px ;
+}
+.text-reset {
+  --bs-text-opacity: 1;
+  color: inherit!important;
+}
+a {
+  color: #5465ff;
+  text-decoration: none;
+}
+/*  End of order detail page  */
